Commit by GohEK

--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".Calender">
 
     <TextView
         android:id="@+id/textView"
@@ -14,7 +14,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="369dp"
         android:layout_marginRight="369dp"
-        android:text="Home"/>
+        android:text="Calender"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -25,5 +25,4 @@
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:menu="@menu/menu_navigation"/>
-
 </RelativeLayout>
